--- a/app/views/_layout-auth.njk
+++ b/app/views/_layout-auth.njk
@@ -31,6 +31,9 @@
 {% from "govuk/components/textarea/macro.njk"            import govukTextarea %}
 {% from "govuk/components/warning-text/macro.njk"        import govukWarningText %}
 
+
+{% from "_components/footer/macro.njk"                 import appFooter %}
+
 {% block head %}
   {% include "_includes/head.njk" %}
 {% endblock %}
