--- a/app/views/_layout.njk
+++ b/app/views/_layout.njk
@@ -36,6 +36,7 @@
 {% from "_components/badge/macro.njk"                  import appBadge %}
 {% from "_components/banner/macro.njk"                 import appBanner %}
 {% from "_components/filter/macro.njk"                 import appFilter %}
+{% from "_components/footer/macro.njk"                 import appFooter %}
 {% from "_components/metric/macro.njk"                 import appMetric %}
 {% from "_components/page-header-actions/macro.njk"    import appPageHeaderActions %}
 {% from "_components/pagination/macro.njk"             import appPagination %}
