--- a/app/views/users/edit.njk
+++ b/app/views/users/edit.njk
@@ -2,7 +2,7 @@
 
 {% set primaryNavId = "users" %}
 
-{% set title = "Invite user" %}
+{% set title = "Add user" %}
 
 {% block pageTitle %}
   {{ "Error: " if errors.length }}{{ title + " - " if title }}{{ caption + " - " if caption }}{{ serviceName }} - GOV.UK
@@ -61,7 +61,7 @@
           value: user.email
         }) }}
 
-        {{ govukInput({
+        <!-- {#{ govukInput({
           id: "organisation",
           name: "user[organisation]",
           label: {
@@ -70,9 +70,9 @@
           },
           errorMessage: errors | getErrorMessage("organisation"),
           value: user.organisation
-        }) }}
+        }) }#} -->
 
-        {{ govukTextarea({
+        <!-- {#{ govukTextarea({
           id: "reason",
           name: "user[reason]",
           label: {
@@ -81,10 +81,10 @@
           },
           errorMessage: errors | getErrorMessage("reason"),
           value: user.reason
-        }) }}
+        }) }#} -->
 
         {{ govukButton({
-          text: "Invite user"
+          text: "Add user"
         }) }}
 
       </form>
