--- a/app/views/users/list.njk
+++ b/app/views/users/list.njk
@@ -18,7 +18,7 @@
       {% include "_includes/page-heading.njk" %}
 
       {{ govukButton({
-        text: "Invite user",
+        text: "Add user",
         href: actions.new
       }) }}
 
