--- a/app/views/users/list.njk
+++ b/app/views/users/list.njk
@@ -27,7 +27,7 @@
           <tr class="govuk-table__row">
             <th class="govuk-table__header govuk-!-width-one-third">Name</th>
             <th class="govuk-table__header">Email</th>
-            <th class="govuk-table__header">Status</th>
+            <!-- <th class="govuk-table__header">Status</th> -->
           </tr>
         </thead>
         <tbody class="govuk-table__body">
@@ -44,9 +44,9 @@
               <td class="govuk-table__cell">
                 {{ user.email if user.email else "Not entered" }}
               </td>
-              <td class="govuk-table__cell">
+              <!-- <td class="govuk-table__cell">
                 {{ "Active" if user.active else "Inactive" }}
-              </td>
+              </td> -->
             </tr>
           {% endfor %}
         </tbody>
