--- a/app/views/organisations/details.njk
+++ b/app/views/organisations/details.njk
@@ -3,6 +3,7 @@
 {% set primaryNavId = "settings" %}
 
 {% set title = "Organisation details" %}
+{#% set title = organisation.name + " (" + organisation.code + ")" %#}
 
 {% block beforeContent %}
 
@@ -15,14 +16,21 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-l">
-        {% if caption %}
-          <span class="govuk-caption-l">
-            {{ caption }}
-          </span>
-        {% endif %}
-        {{ title }}
-      </h1>
+      {% include "_includes/page-heading.njk" %}
+
+    </div>
+  </div>
+
+  <!-- <div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
+
+      {% include "./_sub-navigation.njk" %}
+
+    </div>
+  </div> -->
+
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
 
       <!-- <h2 class="govuk-heading-m">Organisation details</h2> -->
 
