Add partner nav item

--- a/app/views/_layout.njk
+++ b/app/views/_layout.njk
@@ -115,8 +115,8 @@
           active: primaryNavId == "users"
         },
         {
-          href: "#",
-          text: "Training providers",
+          href: baseUrl + "/partners",
+          text: "Partners",
           active: primaryNavId == "partners"
         } if passport.organisation.type in ["hei","scitt"],
         {
