--- a/app/views/organisations/details.njk
+++ b/app/views/organisations/details.njk
@@ -14,288 +14,35 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      {% include "_includes/page-heading.njk" %}
+    </div>
+  </div>
 
-      <h1 class="govuk-heading-l">
-        {% if caption %}
-          <span class="govuk-caption-l">
-            {{ caption }}
-          </span>
-        {% endif %}
-        {{ title }}
-      </h1>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
+      {% include "./_organisation-details.njk" %}
+    </div>
+  </div>
 
-      <!-- <h2 class="govuk-heading-m">Organisation details</h2> -->
+  {% if organisation.type in ["hei","scitt"] %}
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-full">
+        {% include "./_visa-sponsorship.njk" %}
+      </div>
+    </div>
+  {% endif %}
 
-      {{ govukSummaryList({
-        rows: [
-          {
-            key: {
-              text: "Name"
-            },
-            value: {
-              text: organisation.name
-            }
-          },
-          {
-            key: {
-              text: "Code"
-            },
-            value: {
-              text: organisation.code
-            }
-          },
-          {
-            key: {
-              text: "UK provider reference number (UKPRN)"
-            },
-            value: {
-              text: organisation.ukprn if organisation.ukprn.length else "Not entered",
-              classes: "govuk-hint" if not organisation.ukprn.length
-            },
-            actions: {
-              items: [
-                {
-                  href: actions.change + "/edit",
-                  text: "Change",
-                  visuallyHiddenText: "UK provider reference number (UKPRN)"
-                }
-              ]
-            }
-          },
-          {
-            key: {
-              text: "Unique reference number (URN)"
-            },
-            value: {
-              text: organisation.urn if organisation.urn.length else "Not entered",
-              classes: "govuk-hint" if not organisation.urn.length
-            },
-            actions: {
-              items: [
-                {
-                  href: actions.change + "/edit",
-                  text: "Change",
-                  visuallyHiddenText: "unique reference number (URN)"
-                }
-              ]
-            }
-          },
-          {
-            key: {
-              text: "Training with your organisation"
-            },
-            value: {
-              html: (organisation.trainWithUs | nl2br | markdownToHtml | safe) if organisation.trainWithUs.length else "Not entered",
-              classes: "govuk-hint" if not organisation.trainWithUs.length
-            },
-            actions: {
-              items: [
-                {
-                  href: actions.change + "/training",
-                  text: "Change",
-                  visuallyHiddenText: "information about training with your organisation"
-                }
-              ]
-            }
-          },
-          {
-            key: {
-              text: "Training with disabilities and other needs"
-            },
-            value: {
-              html: (organisation.trainWithDisability | nl2br | markdownToHtml | safe) if organisation.trainWithDisability.length else "Not entered",
-              classes: "govuk-hint" if not organisation.trainWithDisability.length
-            },
-            actions: {
-              items: [
-                {
-                  href: actions.change + "/training-with-disabilities",
-                  text: "Change",
-                  visuallyHiddenText: "information about training with disabilities and other needs"
-                }
-              ]
-            }
-          }
-        ]
-      }) }}
+  {% if organisation.type == "lead_school" %}
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-full">
+        {% include "./_accredited-bodies.njk" %}
+      </div>
+    </div>
+  {% endif %}
 
-      {% if organisation.type in ["hei","scitt"] %}
-
-        <h2 class="govuk-heading-m govuk-!-margin-top-9">Visa sponsorship</h2>
-
-        {{ govukSummaryList({
-          rows: [
-            {
-              key: {
-                text: "Student visa"
-              },
-              value: {
-                text: organisation.visaSponsorship.canSponsorStudentVisa | getStudentVisaLabel + (" - can sponsor" if organisation.visaSponsorship.canSponsorStudentVisa == "yes" else " - cannot sponsor")
-              },
-              actions: {
-                items: [
-                  {
-                    href: actions.change + "/student-visa",
-                    text: "Change",
-                    visuallyHiddenText: "if candidates get a sponsored Student visa for your fee-paying courses"
-                  }
-                ]
-              } if organisation.type == "hei"
-            },
-            {
-              key: {
-                text: "Skilled Worker visa"
-              },
-              value: {
-                text: organisation.visaSponsorship.canSponsorSkilledWorkerVisa | getSkilledWorkerVisaLabel + (" - can sponsor" if organisation.visaSponsorship.canSponsorSkilledWorkerVisa == "yes" else " - cannot sponsor")
-              },
-              actions: {
-                items: [
-                  {
-                    href: actions.change + "/skilled-worker-visa",
-                    text: "Change",
-                    visuallyHiddenText: "if candidates get a sponsored Skilled Worker visa for your salaried courses"
-                  }
-                ]
-              }
-            }
-          ]
-        }) }}
-
-      {% endif %}
-
-      {% if organisation.type == "lead_school" %}
-
-        <h2 class="govuk-heading-m govuk-!-margin-top-9">Accredited bodies</h2>
-
-        {{ govukButton({
-          text: "Add accredited body",
-          href: "#"
-        }) }}
-
-        <dl class="govuk-summary-list">
-          {% for accreditedBody in organisation.accreditedBodies %}
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              {{ accreditedBody.name }}
-            </dt>
-            {% if accreditedBody.description.length %}
-              <dd class="govuk-summary-list__value">
-                {{ accreditedBody.description | nl2br | markdownToHtml | safe }}
-              </dd>
-            {% else %}
-              <dd class="govuk-summary-list__value govuk-hint">
-                Not entered
-              </dd>
-            {% endif %}
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="{{ actions.change }}/accredited-bodies/{{ accreditedBody.id }}">
-                Change<span class="govuk-visually-hidden"> {{ accreditedBody.name }}’s description</span>
-              </a>
-            </dd>
-          </div>
-          {% endfor %}
-        </dl>
-
-      {% endif %}
-
-      <h2 class="govuk-heading-m govuk-!-margin-top-9">Contact details</h2>
-
-      {% set addressHtml %}
-        {% if organisation.address.addressLine1.length %}
-          {{ organisation.address.addressLine1 }}<br>
-        {% endif %}
-        {% if organisation.address.addressLine2.length %}
-          {{ organisation.address.addressLine2 }}<br>
-        {% endif %}
-        {% if organisation.address.town.length %}
-          {{ organisation.address.town }}<br>
-        {% endif %}
-        {% if organisation.address.county.length %}
-          {{ organisation.address.county }}<br>
-        {% endif %}
-        {% if organisation.address.postcode.length %}
-          {{ organisation.address.postcode }}<br>
-        {% endif %}
-      {% endset %}
-
-      {{ govukSummaryList({
-        rows: [
-          {
-            key: {
-              text: "Email address"
-            },
-            value: {
-              text: organisation.contact.email if organisation.contact.email.length else "Not entered",
-              classes: "govuk-hint" if not organisation.contact.email.length
-            },
-            actions: {
-              items: [
-                {
-                  href: actions.change + "/contact-details",
-                  text: "Change",
-                  visuallyHiddenText: "email address"
-                }
-              ]
-            }
-          },
-          {
-            key: {
-              text: "Telephone number"
-            },
-            value: {
-              text: organisation.contact.telephone if organisation.contact.telephone.length else "Not entered",
-              classes: "govuk-hint" if not organisation.contact.telephone.length
-            },
-            actions: {
-              items: [
-                {
-                  href: actions.change + "/contact-details",
-                  text: "Change",
-                  visuallyHiddenText: "telephone number"
-                }
-              ]
-            }
-          },
-          {
-            key: {
-              text: "Website"
-            },
-            value: {
-              text: organisation.contact.website if organisation.contact.website.length else "Not entered",
-              classes: "govuk-hint" if not organisation.contact.website.length
-            },
-            actions: {
-              items: [
-                {
-                  href: actions.change + "/contact-details",
-                  text: "Change",
-                  visuallyHiddenText: "website"
-                }
-              ]
-            }
-          },
-          {
-            key: {
-              text: "Address"
-            },
-            value: {
-              html: ('<p class="govuk-body">' + addressHtml + '</p>') if addressHtml | trim | length else "Not entered",
-              classes: "govuk-hint" if not addressHtml | trim | length
-            },
-            actions: {
-              items: [
-                {
-                  href: actions.change + "/contact-details",
-                  text: "Change",
-                  visuallyHiddenText: "website"
-                }
-              ]
-            }
-          }
-        ]
-      }) }}
-
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      {% include "./_contact-details.njk" %}
     </div>
   </div>
 
