Update accredited body views

--- a/app/views/organisations/_accredited-bodies.njk
+++ b/app/views/organisations/_accredited-bodies.njk
@@ -21,7 +21,7 @@
       </dd>
     {% endif %}
     <dd class="govuk-summary-list__actions">
-      <a class="govuk-link" href="{{ actions.change }}/accredited-bodies/{{ accreditedBody.id }}/description">
+      <a class="govuk-link" href="{{ actions.change }}/accredited-bodies/{{ accreditedBody.id }}/description?referrer=change">
         Change<span class="govuk-visually-hidden"> {{ accreditedBody.name }}’s description</span>
       </a>
     </dd>
