--- a/app/views/organisations/accredited-bodies/new.njk
+++ b/app/views/organisations/accredited-bodies/new.njk
@@ -31,7 +31,7 @@
 
         {{ appAutocompleteFromSelect({
           id: "accredited-body",
-          name: "organisation[accreditedBody][id]",
+          name: "accreditedBody[id]",
           label: {
             html: headingHtml
           },
@@ -57,6 +57,8 @@
       <p class="govuk-body">
         <a class="govuk-link" href="{{ actions.cancel }}">Cancel</a>
       </p>
+
+      {{data.organisation|dump|safe}}
 
     </div>
   </div>
