--- a/app/views/organisations/accredited-bodies/new.njk
+++ b/app/views/organisations/accredited-bodies/new.njk
@@ -40,6 +40,7 @@
           },
           classes: "govuk-!-width-two-thirds",
           items: accreditedBodyOptions,
+          errorMessage: errors | getErrorMessage("accredited-body"),
           autocompleteOptions: {
             autoselect: true,
             showAllValues: false,
