--- a/app/views/_components/badge/template.njk
+++ b/app/views/_components/badge/template.njk
@@ -1,3 +1,3 @@
-<span class="app-badge {{- ' ' + params.classes if params.classes }}" {%- if (params.label) %} aria-label=""{% endif -%} {%- for attribute, value in params.attributes -%} {{ attribute }}="{{ value }}"{% endfor %}>
+<span class="app-badge {{- ' ' + params.classes if params.classes }}" {%- if params.label %} aria-label="{{ params.label }}"{% endif -%} {%- for attribute, value in params.attributes -%} {{ attribute }}="{{ value }}"{% endfor %}>
   {{- params.html | safe if params.html else params.text -}}
 </span>
