--- a/app/views/_components/sub-navigation/template.njk
+++ b/app/views/_components/sub-navigation/template.njk
@@ -1,4 +1,4 @@
-<nav class="app-sub-navigation {{- ' ' + params.classes if params.classes}}" {%- if (params.label) %} aria-label="{{ params.label }}"{% endif %} {%- for attribute, value in params.attributes -%} {{ attribute }}="{{ value }}"{% endfor %}>
+<nav class="app-sub-navigation {{- ' ' + params.classes if params.classes}}" {%- if params.label %} aria-label="{{ params.label }}"{% endif %} {%- for attribute, value in params.attributes -%} {{ attribute }}="{{ value }}"{% endfor %}>
 
   <ul class="app-sub-navigation__list">
 
