Move autocomplete styles into component folder

--- a/app/views/_components/all.scss
+++ b/app/views/_components/all.scss
@@ -1,4 +1,5 @@
 @import "action-bar/action-bar";
+@import "autocomplete/autocomplete";
 @import "badge/badge";
 @import "banner/banner";
 @import "button-menu/button-menu";
