--- a/app/views/organisations/contact-details.njk
+++ b/app/views/organisations/contact-details.njk
@@ -4,6 +4,10 @@
 
 {% set title = "Contact details" %}
 
+{% block pageTitle %}
+  {{ "Error: " if errors.length }}{{ title + " - " if title }}{{ caption + " - " if caption }}{{ serviceName }} - GOV.UK
+{% endblock %}
+
 {% block beforeContent %}
 {{ govukBackLink({
   text: "Back",
