--- a/app/views/_layout.njk
+++ b/app/views/_layout.njk
@@ -120,6 +120,11 @@
           active: primaryNavId == "partners"
         } if passport.organisation.type in ["hei","scitt"],
         {
+          href: baseUrl + "/accredited-bodies",
+          text: "Accredited bodies",
+          active: primaryNavId == "accreditedBodies"
+        } if passport.organisation.type == "lead_school",
+        {
           href: baseUrl + "/details",
           text: "Organisation details",
           active: primaryNavId == "settings"
