--- a/app/views/accredited-bodies/check-your-answers.njk
+++ b/app/views/accredited-bodies/check-your-answers.njk
@@ -1,6 +1,6 @@
 {% extends "_layout.njk" %}
 
-{% set primaryNavId = "settings" %}
+{% set primaryNavId = "accreditedBodies" %}
 
 {% set title = "Check your answers" %}
 {% set caption = "Add accredited body" %}
