--- a/app/views/accredited-bodies/delete.njk
+++ b/app/views/accredited-bodies/delete.njk
@@ -1,8 +1,13 @@
 {% extends "_layout.njk" %}
 
-{% set primaryNavId = "settings" %}
+{% set primaryNavId = "accreditedBodies" %}
 
-{% set title = "Are you sure you want to delete this accredited body?" %}
+{% if hasCourses %}
+  {% set title = "You cannot delete this accredited body" %}
+{% else %}
+  {% set title = "Are you sure you want to delete this accredited body?" %}
+{% endif %}
+
 {% set caption = accreditedBody.name %}
 
 {% block pageTitle %}
@@ -27,10 +32,15 @@
 
       <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
 
-        {{ govukButton({
-          text: "Delete accredited body",
-          classes: "govuk-button--warning"
-        }) }}
+        {% if hasCourses %}
+          <p class="govuk-body">{{ accreditedBody.name }} ratifies courses for {{ organisation.name }} and cannot be deleted.</p>
+          <p class="govuk-body">To delete {{ accreditedBody.name }} you must first update the accredited body for all the courses they ratify.</p>
+        {% else %}
+          {{ govukButton({
+            text: "Delete accredited body",
+            classes: "govuk-button--warning"
+          }) }}
+        {% endif %}
 
       </form>
 
