--- a/app/views/accredited-bodies/description.njk
+++ b/app/views/accredited-bodies/description.njk
@@ -1,9 +1,15 @@
 {% extends "_layout.njk" %}
 
-{% set primaryNavId = "settings" %}
+{% set primaryNavId = "accreditedBodies" %}
 
-{% set title = "Accredited body" %}
-{% set caption = "Add accredited body" %}
+{% set title = "Accredited body description" %}
+
+{% if referrer == "change" %}
+  {% set caption = accreditedBody.name %}
+  <!-- + " (" + accreditedBody.code + ")" -->
+{% else %}
+  {% set caption = "Add accredited body" %}
+{% endif %}
 
 {% block pageTitle %}
   {{ "Error: " if errors.length }}{{ title + " - " if title }}{{ caption + " - " if caption }}{{ serviceName }} - GOV.UK
@@ -29,28 +35,27 @@
 
       <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
 
-        {{ appAutocompleteFromSelect({
-          id: "accredited-body",
-          name: "accreditedBody[id]",
+        {{ govukCharacterCount({
+          id: "accreditied-body-description",
+          name: "accreditedBody[description]",
+          rows: 10,
+          maxwords: 100,
           label: {
             html: headingHtml
           },
-          hint: {
-            text: "Search for the accredited body"
-          },
-          classes: "govuk-!-width-two-thirds",
-          items: accreditedBodyOptions,
-          errorMessage: errors | getErrorMessage("accredited-body"),
-          autocompleteOptions: {
-            autoselect: true,
-            showAllValues: false,
-            allowEmpty: true
-          }
+          errorMessage: errors | getErrorMessage("accredited-body-description"),
+          value: accreditedBody.description
         }) }}
 
-        {{ govukButton({
-          text: "Continue"
-        }) }}
+        {% if referrer == "change" %}
+          {{ govukButton({
+            text: "Update accredited body description"
+          }) }}
+        {% else %}
+          {{ govukButton({
+            text: "Continue"
+          }) }}
+        {% endif %}
 
       </form>
 
