--- a/app/views/accredited-bodies/list.njk
+++ b/app/views/accredited-bodies/list.njk
@@ -1,9 +1,8 @@
 {% extends "_layout.njk" %}
 
-{% set primaryNavId = "settings" %}
-{% set subNavId = "partners" %}
+{% set primaryNavId = "accreditedBodies" %}
 
-{% set title = "Organisation details" %}
+{% set title = "Accredited bodies" %}
 
 {% block beforeContent %}
 
@@ -19,19 +18,58 @@
     </div>
   </div>
 
-  {% include "./_sub-navigation.njk" %}
-
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-
-      <h2 class="govuk-heading-m">Accredited bodies</h2>
 
       {{ govukButton({
         text: "Add accredited body",
         href: actions.new + "/accredited-bodies/new"
       }) }}
 
-      <dl class="govuk-summary-list">
+      {% for accreditedBody in organisation.accreditedBodies %}
+
+        {% set summaryHtml %}
+
+          {{ govukSummaryList({
+            rows: [
+              {
+                key: {
+                  text: "Description"
+                },
+                value: {
+                  text: (accreditedBody.description | nl2br | markdownToHtml | safe) if accreditedBody.description.length else "Not entered",
+                  classes: "govuk-hint" if not accreditedBody.description.length
+                }
+              }
+            ]
+          }) }}
+
+        {% endset %}
+
+        {{ appSummaryCard({
+          titleText: accreditedBody.name,
+          html: summaryHtml,
+          actions: {
+            items: [
+              {
+                href: actions.change + "/accredited-bodies/" + accreditedBody.id + "/description?referrer=change",
+                text: "Change",
+                visuallyHiddenText: accreditedBody.name + "’s description"
+              },
+              {
+                href: actions.change + "/accredited-bodies/" + accreditedBody.id + "/delete",
+                text: "Delete",
+                visuallyHiddenText: accreditedBody.name,
+                classes: "app-link--destructive"
+              }
+            ]
+          },
+          classes: "govuk-!-margin-bottom-5"
+        }) }}
+
+      {% endfor %}
+
+      <!-- <dl class="govuk-summary-list">
         {% for accreditedBody in organisation.accreditedBodies %}
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
@@ -62,7 +100,7 @@
           </dd>
         </div>
         {% endfor %}
-      </dl>
+      </dl> -->
 
     </div>
   </div>
