Change partners to training partners

--- a/app/views/_layout.njk
+++ b/app/views/_layout.njk
@@ -116,7 +116,7 @@
         },
         {
           href: baseUrl + "/partners",
-          text: "Partners",
+          text: "Training partners",
           active: primaryNavId == "partners"
         } if passport.organisation.type in ["hei","scitt"],
         {
