--- a/app/views/partners/list.njk
+++ b/app/views/partners/list.njk
@@ -2,7 +2,7 @@
 
 {% set primaryNavId = "partners" %}
 
-{% set title = "Partners" %}
+{% set title = "Training partners" %}
 
 {% block beforeContent %}
 
