Add 'optional' to description label

--- a/app/views/accredited-bodies/description.njk
+++ b/app/views/accredited-bodies/description.njk
@@ -2,7 +2,7 @@
 
 {% set primaryNavId = "accreditedBodies" %}
 
-{% set title = "Accredited body description" %}
+{% set title = "Accredited body description (optional)" %}
 
 {% if referrer == "change" %}
   {% set caption = accreditedBody.name %}
