--- a/app/views/accredited-bodies/list.njk
+++ b/app/views/accredited-bodies/list.njk
@@ -30,6 +30,20 @@
 
         {% set summaryHtml %}
 
+          {% set permissionsHtml %}
+            {% if accreditedBody.permissions.length %}
+              <ul class="govuk-list">
+                {% for permission in accreditedBody.permissions %}
+                  <li>
+                    {{ permission | getPermissionLabel }}
+                  </li>
+                {% endfor %}
+              </ul>
+            {% else %}
+              <p class="govuk-body">View only</p>
+            {% endif %}
+          {% endset %}
+
           {{ govukSummaryList({
             rows: [
               {
@@ -39,6 +53,32 @@
                 value: {
                   text: (accreditedBody.description | nl2br | markdownToHtml | safe) if accreditedBody.description.length else "Not entered",
                   classes: "govuk-hint" if not accreditedBody.description.length
+                },
+                actions: {
+                  items: [
+                    {
+                      href: actions.change + "/accredited-bodies/" + accreditedBody.id + "/description?referrer=change",
+                      text: "Change",
+                      visuallyHiddenText: "accredited body description"
+                    }
+                  ]
+                }
+              },
+              {
+                key: {
+                  text: "Permissions"
+                },
+                value: {
+                  html: permissionsHtml
+                },
+                actions: {
+                  items: [
+                    {
+                      href: actions.change + "/accredited-bodies/" + accreditedBody.id + "/permissions?referrer=change",
+                      text: "Change",
+                      visuallyHiddenText: "accredited body permission"
+                    }
+                  ]
                 }
               }
             ]
@@ -55,7 +95,7 @@
                 href: actions.change + "/accredited-bodies/" + accreditedBody.id + "/description?referrer=change",
                 text: "Change",
                 visuallyHiddenText: accreditedBody.name + "’s description"
-              },
+              } if 1 == 0,
               {
                 href: actions.change + "/accredited-bodies/" + accreditedBody.id + "/delete",
                 text: "Delete",
