--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -45,7 +45,7 @@ $git-brand-colour: #159964;
 // @import "components/description-list";
 @import "components/inset-text";
 // @import "components/link";
-// @import "components/list";
+@import "components/list";
 // @import "components/map";
 // @import "components/overrides";
 // @import "components/phase-tag";
